--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required>
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Email" required>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_m" name="Gender" required>
+		<label for="gender_f">Female</label>
+		<input type="radio" id="gender_f" name="Gender" required>
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option value="">please choose an option </option>
+			<option value="BMW">BMW</option>
+			<option value="porche">porche</option>
+			<option value="Audi">Audi</option>
+		</select>
+		<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required>
+		<label for="dob">DOB</label>
+		<input type="date" id="dob"  required>
+		<label for="tel">Phone Number</label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx" >
+		<label for="password">Password</label>
+		<input type="password" id="password" placeholder="password"  required>
+		<input type="checkbox" id="tos" required>
+		<label for="tos">I agree to the TOS</label>
+		<button type="submit">submit</button>
+		
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
