--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="radio" id="gender_f" name="Gender" required>
 		<label for="cars">Car Brands</label>
 		<select id="cars">
-			<option value="">please choose an option </option>
+			<option value="">--Please choose an option-- </option>
 			<option value="BMW">BMW</option>
 			<option value="porche">porche</option>
 			<option value="Audi">Audi</option>
