--- a/main.html
+++ b/main.html
@@ -11,10 +11,12 @@
 	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" placeholder="Name" required>
+		<label for="email">Email</label>
+		<input type="email" id="email" placeholder="Email" required>
 		<label for="gender_m">Male</label>
-		<input type="radio" id="gender_m" name="Gender" required>
+		<input type="radio" id="gender_m" name="gender" required>
 		<label for="gender_f">Female</label>
-		<input type="radio" id="gender_f" name="Gender" required>
+		<input type="radio" id="gender_f" name="gender" required>
 		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option value="">--Please choose an option-- </option>
@@ -22,8 +24,6 @@
 			<option value="porche">porche</option>
 			<option value="Audi">Audi</option>
 		</select>
-		<label for="email">Email</label>
-		<input type="email" id="email" placeholder="Email" required>
 		<label for="age">Age</label>
 		<input type="number" id="age" placeholder="Age" required>
 		<label for="dob">DOB</label>
